crates/plotnik-tests/tests/02-parser/recovery_validation/ref_with_supertype_slash.txt
Q = (RefName/subtype)
------------------ DIAGNOSTICS -------------------
error: references cannot have supertypes
 --> query.ptk:1:13
  |
1 | Q = (RefName/subtype)
  |             ^
  |
help: category refinement applies to node kinds, not definition references. Remove the refinement or apply it to a concrete node kind
